--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -3,7 +3,22 @@
 {% block title %} Login {% endblock %}
 
 {% block content %} 
-<h1>Login to FlaskyLogin Page</h1>
+
+<form method="post">
+  <h3 align="center">Login</h3>
+  <div class="form-group mb-3">
+    <label for="email" class="mb-2">Email Address</label>
+    <input type="email" class="form-control" id="email" name="email" placeholder="Enter Email">
+  </div>
+  
+  <div class="form-group mb-3">
+    <label for="password"  class="mb-2">Password</label>
+    <input type="password" class="form-control" id="password" name="password" placeholder="Enter password">
+  </div>
+
+
+  <button type="submit" class="btn btn-primary">Login</button>
+</form>
 
 
 {% endblock %}
