--- a/website/templates/signup.html
+++ b/website/templates/signup.html
@@ -3,5 +3,28 @@
 {% block title %} Sign Up {% endblock %}
 
 {% block content %} 
-<h1>Sign Up to FlaskyLogin Page</h1>
+
+<form method="post">
+  <h3 align="center">Sign Up</h3>
+  <div class="form-group mb-3">
+    <label for="email" class="mb-2">Email Address</label>
+    <input type="email" class="form-control" id="email" name="email" placeholder="Enter Email">
+  </div>
+    <div class="form-group  mb-3">
+    <label for="firstName"  class="mb-2">First Name</label>
+    <input type="text" class="form-control" id="text" name="text" placeholder="Enter first name">
+  </div>
+  <div class="form-group mb-3">
+    <label for="password1"  class="mb-2">Password</label>
+    <input type="password" class="form-control" id="password1" name="password1" placeholder="Enter password">
+  </div>
+    <div class="form-group  mb-3">
+    <label for="password2"  class="mb-2">Password (confirm)</label>
+    <input type="password" class="form-control" id="password2" name="password2" placeholder="Confirm password">
+  </div>
+  <br/>
+  <button type="submit" class="btn btn-primary">Sign Up</button>
+</form>
+
 {% endblock %}
+
