--- a/website/templates/signup.html
+++ b/website/templates/signup.html
@@ -12,7 +12,7 @@
   </div>
     <div class="form-group  mb-3">
     <label for="firstName"  class="mb-2">First Name</label>
-    <input type="text" class="form-control" id="text" name="text" placeholder="Enter first name">
+    <input type="text" class="form-control" id="text" name="firstName" placeholder="Enter first name">
   </div>
   <div class="form-group mb-3">
     <label for="password1"  class="mb-2">Password</label>
