added if logic in login and sign up to check if user exist yet

--- a/website/templates/signup.html
+++ b/website/templates/signup.html
@@ -23,6 +23,7 @@
     <input type="password" class="form-control" id="password2" name="password2" placeholder="Confirm password">
   </div>
   <br/>
+  <div class="h-captcha" data-sitekey="9aa30f5a-5f4a-4d27-84f6-a6c41817e5f5"></div>
   <button type="submit" class="btn btn-primary">Sign Up</button>
 </form>
 
