--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -18,18 +18,23 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
+        {% if user.is_authenticated %}
         <li class="nav-item">
-          <a class="nav-link" id="login" href="/login">Login</a>
+          <a class="nav-link "id="home" href="/">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" id="logout" href="/logout">Logout</a>
         </li>
+        {% else %}
+        
+        <li class="nav-item">
+          <a class="nav-link" id="login" href="/login">Login</a>
+        </li>
+
         <li class="nav-item">
           <a class="nav-link" id="signup" href="/signup">Sign Up</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link "id="home" href="/">Home</a>
-        </li>
+        {% endif %}
         </ul>
       </div>
     </div>
