--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -3,5 +3,21 @@
 {% block title %} Home Page {% endblock %}
 
 {% block content %} 
-<h1>Welcome on HomePage at FlaskyLogin</h1>
+
+<h1 align="center">Notes</h1>
+<ul class="list-group list-group-flush" id="notes" >
+  {% for note in user.notes %}
+    <li class="list-group-item">{{ note.data }}</li>
+  {% endfor %}
+</ul>
+
+
+<form method="POST">
+  <textarea name="note" id="note" class="form-control"></textarea>
+  <br/>
+  <div align="center">
+    <button type="submit" class="btn btn-primary">Add note</button>
+  </div>
+</form>
+
 {% endblock %}
